mywork/force-app/main/default/objects/Profile_Permission_Data__mdt/Profile_Permission_Data__mdt.object-meta.xml
<CustomObject>
    <label>Profile Permission Data</label>
    <pluralLabel>Profile Permission Data</pluralLabel>
</CustomObject>