mywork/force-app/main/default/objects/Profile_Permission_Data__mdt/fields/Has_Sub_Sections__c.field-meta.xml
<CustomField>
    <fullName>Has_Sub_Sections__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if this Category is has sub sections. Sub sections are broken down by Standard / Custom (only applies for categories)</description>
    <inlineHelpText>Controls if this Category is has sub sections. Sub sections are broken down by Standard / Custom (only applies for categories)</inlineHelpText>
    <label>Has Sub Sections</label>
    <type>Checkbox</type>
</CustomField>