mywork/force-app/main/default/objects/Profile_Permission_Data__mdt/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>