mywork/force-app/main/default/objects/Profile_Permission_Data__mdt/fields/Is_Category__c.field-meta.xml
<CustomField>
    <fullName>Is_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Category</label>
    <type>Checkbox</type>
</CustomField>