mywork/force-app/main/default/objects/Profile_Permission_Data__mdt/fields/Option_Label__c.field-meta.xml
<CustomField>
    <fullName>Option_Label__c</fullName>
    <description>stores the name of the option, for example 'Modify All Data'</description>
    <inlineHelpText>stores the name of the option, for example 'Modify All Data'</inlineHelpText>
    <label>Option Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>