mywork/force-app/main/default/objects/Profile_Permission_Data__mdt/fields/Option_Value__c.field-meta.xml
<CustomField>
    <fullName>Option_Value__c</fullName>
    <description>stores the API name of the option, for example 'modifyAllData'</description>
    <inlineHelpText>stores the API name of the option, for example 'modifyAllData'</inlineHelpText>
    <label>Option Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>